chore: Doc on why JNI is used to access NSWindow handle